# yt-dlv

./: .gitignore  Cargo.toml  README.md
.claude/skills/yt-dlv/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/ytdlv-cli/: Cargo.toml
crates/ytdlv-cli/src/: cli.rs  ffmpeg.rs  format_table.rs  main.rs  subs.rs
crates/ytdlv-core/: Cargo.toml
crates/ytdlv-core/src/: cookies.rs  cookies_browser.rs  format_selection.rs  info.rs  lib.rs  net.rs  output.rs
crates/ytdlv-download/: Cargo.toml
crates/ytdlv-download/src/: hls.rs  lib.rs
crates/ytdlv-download/tests/: range_download.rs
crates/ytdlv-extractor/: Cargo.toml
crates/ytdlv-extractor/src/: generic.rs  lib.rs
crates/ytdlv-extractor/src/youtube/: clients.rs  mod.rs  player.rs  playlist.rs  signature.rs
crates/ytdlv-jsruntime/: Cargo.toml
crates/ytdlv-jsruntime/src/: external.rs  lib.rs  quickjs.rs
