[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/nhodges/yt-dlv"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "gzip", "brotli", "json", "stream", "cookies"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
percent-encoding = "2"
url = "2"

ytdlv-core = { path = "crates/ytdlv-core" }
ytdlv-jsruntime = { path = "crates/ytdlv-jsruntime" }
ytdlv-extractor = { path = "crates/ytdlv-extractor" }
ytdlv-download = { path = "crates/ytdlv-download" }
