[package]
name = "ytdlv-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "yt-dlv"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
ytdlv-core.workspace = true
ytdlv-jsruntime.workspace = true
ytdlv-extractor.workspace = true
ytdlv-download.workspace = true
