[package]
name = "ytdlv-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tracing.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
aes.workspace = true
cbc.workspace = true
pbkdf2.workspace = true
sha1.workspace = true
dirs.workspace = true
