[package]
name = "ytdlv-extractor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tracing.workspace = true
reqwest.workspace = true
url.workspace = true
percent-encoding.workspace = true
async-trait = "0.1"
ytdlv-core.workspace = true
ytdlv-jsruntime.workspace = true
