[package]
name = "ytdlv-jsruntime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
# No `bindgen` feature: use rquickjs's pre-generated bindings so release builds
# don't require libclang on every OS (macOS/Windows runners).
rquickjs = { version = "0.9" }
